@@ -227,7 +227,27 @@ entries:
       - title: Design Considerations
         url: /ai/hciai_edge_design_considerations.html
       - title: Deploying NetApp HCI – AI Inferencing at the Edge
-        url: /ai/hciai_edge_deployment_steps.html
+        entries:
+          - title: Configure Network Switches (Automated Deployment)
+            url: /ai/hciai_edge_configure_network_switches_automated_deployment.html
+          - title: Virtual Infrastructure with Automated Deployment
+            url: /ai/hciai_edge_virtual_infrastructure_with_automated_deployment.html
+          - title: Configure NetApp H615c (Manual Deployment)
+            url: /ai/hciai_edge_netapp_h615cmanual_deployment.html
+          - title: Set Up the Deployment Jump and the Kubernetes Master Node VMs Manual Deployment
+            url: /ai/hciai_edge_setp_the_deployment_jump__and_the_kubernetes_master_node_vms_manual_deployment.html
+          - title: Deploy a Kubernetes Cluster with NVIDIA DeepOps Automated Deployment
+            url: /ai/hciai_edge_deploy_a_kubernetes_cluster_with_nvidia_deepops_automated_deployment.html
+          - title: Deploy and Configure ONTAP Select in the VMware Virtual Infrastructure Automated Deployment
+            url: /ai/hciai_edge_deploy_and_configure_ontap_select_in_the_vmware_virtual_infrastructure_automated_deployment.html
+          - title: Deploy NetApp Trident Automated Deployment
+            url: /ai/hciai_edge_deploy_netapp_trident_automated_deployment.html
+          - title: Deploy NVIDIA Triton Inference Server Automated Deployment
+            url: /ai/hciai_edge_deploy_nvidia_triton_inference_server_automated_deployment.html
+          - title: Deploy the Client for Triton Inference Server Automated Deployment
+            url: /ai/hciai_edge_deploy_the_client_for_triton_inference_server_automated_deployment.html
+          - title: Collect Inference Metrics from Triton Inference Server
+            url: /ai/hciai_edge_collect_inference_metrics_from_triton_inference_server.html
       - title: Validation Results
         url: /ai/hciai_edge_validation_results.html
       - title: Additional Information
